--- a/app/src/main/res/layout/store_list_item.xml
+++ b/app/src/main/res/layout/store_list_item.xml
@@ -8,8 +8,8 @@
     android:padding="15dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:src="@mipmap/ic_launcher"
         app:civ_border_width="2dp"
         app:civ_border_color="@color/gray_200"/>
@@ -27,6 +27,14 @@
             android:textSize="20dp"
             android:textColor="@color/black"
             android:textStyle="bold"/>
+
+        <com.willy.ratingbar.ScaleRatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srb_rating="2"
+            app:srb_starWidth="20dp"
+            app:srb_starHeight="20dp"
+            app:srb_starPadding="2dp"/>
 
     </LinearLayout>
 
