--- a/app/src/main/res/layout/store_list_item.xml
+++ b/app/src/main/res/layout/store_list_item.xml
@@ -8,6 +8,7 @@
     android:padding="15dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgLogo"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@mipmap/ic_launcher"
@@ -21,6 +22,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txtStoreName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="가게이름"
@@ -29,6 +31,7 @@
             android:textStyle="bold"/>
 
         <com.willy.ratingbar.ScaleRatingBar
+            android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srb_rating="2"
