필요한 태그에 id 부여

--- a/app/src/main/res/layout/activity_view_store_detail.xml
+++ b/app/src/main/res/layout/activity_view_store_detail.xml
@@ -32,6 +32,7 @@
         android:layout_marginTop="15dp"/>
 
     <TextView
+        android:id="@+id/txtStoreName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -53,11 +54,13 @@
         android:gravity="center_vertical">
 
         <com.willy.ratingbar.ScaleRatingBar
+            android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:srb_isIndicator="true"/>
 
         <TextView
+            android:id="@+id/txtRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -80,6 +83,7 @@
         android:gravity="center_vertical">
 
         <TextView
+            android:id="@+id/PhoneNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="실제 전화번호"
@@ -92,6 +96,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:id="@+id/btnCall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="전화 주문"
