--- a/app/src/main/res/layout/activity_view_store_detail.xml
+++ b/app/src/main/res/layout/activity_view_store_detail.xml
@@ -57,6 +57,7 @@
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:srb_stepSize="0.5"
             app:srb_isIndicator="true"/>
 
         <TextView
@@ -83,7 +84,7 @@
         android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/PhoneNum"
+            android:id="@+id/txtPhoneNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="실제 전화번호"
